--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -30,6 +30,7 @@ footer {
     font-size: 11px;
     background-color: #383838e2;
 }
+
 footer p {
     margin-top: 0; margin-bottom: 0;   
 }
@@ -38,4 +39,35 @@ footer p span {
     display: inline-block;
     margin-left: 20px;
 }
-  
+ 
+/* Split the screen in half */
+.split {
+    height: 100%;
+    width: 50%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    overflow-x: hidden;
+    padding-top: 20px;
+}
+
+/* Control the left side */
+.left {
+    left: 0;
+    background-color: #111;
+}
+
+/* Control the right side */
+.right {
+    right: 0;
+    background-color: red;
+}
+
+/* If you want the content centered horizontally and vertically */
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
