--- a/src/YoutubeVideoStyle.css
+++ b/src/YoutubeVideoStyle.css
@@ -1,10 +1,15 @@
-.youtubeBorder {
-    position: absolute;
+.youtubeList {
     float: left;
-    display:flex;
-    background-color: rgb(236, 20, 20);
-    width: 500px;
+}
+
+.youtubeBorder {
+    background-color: rgb(249, 249, 249);
+    float: left;
+    display: flex;
     height: 10%;
+    width: 90%;
+    margin-top: 1px;
+    border-top: 1px solid rgb(230, 230, 230);
 }
 
 .youtubeImage {
@@ -12,8 +17,13 @@
 }
 
 .youtubeTitle {
-    display:flex;
-    width: 80%;
+    display:inline-block;
+    width: 300px;
+    margin-left: 5px;
+
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .youtubeChannel {
