--- a/src/YoutubeVideoStyle.css
+++ b/src/YoutubeVideoStyle.css
@@ -31,3 +31,30 @@
     text-overflow: ellipsis;
 }
 
+.iframe16To9 {
+    width: 100%;
+    height: 30vh;
+    top: 0;
+    left: 0;
+    margin-bottom: 5px;
+}
+
+.youtubeTagBorder {
+    background-color: rgb(249, 249, 249);
+    display: flex;
+    height: 10%;
+    width: 100%;
+    border-bottom: 1px solid rgb(230, 230, 230);
+    margin: auto;
+}
+.youtubeTag{
+    border: 1px solid rgb(203, 203, 203);
+    cursor:pointer; 
+    cursor:hand;
+    background-color: rgb(204, 204, 204);
+    color: black;
+    padding: 5px;
+    border-radius: 2em;
+    margin-top: 2px;
+    margin-left: 2px;
+}
