--- a/src/Jaehyeok_Lee/Sidebar.css
+++ b/src/Jaehyeok_Lee/Sidebar.css
@@ -9,7 +9,6 @@
 }
 
 .side_filter {
-    background-color: yellow;
     display: flex;
     border-top: 3px solid white;
     border-right: 3px solid white;
@@ -24,21 +23,34 @@
 .container {
     background-color: rebeccapurple;
     color: white; /* 글자색 */
-    border-top: 5px solid white; /* 테두리 방향별 두께(합쳐서 border-width로도 사용) */
-    border-right: 5px solid white;
-    border-left: 5px solid white;
-    border-bottom: 5px solid white;
+    border-top: 3px solid white; /* 테두리 방향별 두께(합쳐서 border-width로도 사용) */
+    border-right: 3px solid white;
+    border-left: 3px solid white;
+    border-bottom: 3px solid white;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 25%;
+    width: 33.33333%;
     height: 100%;
     &.activated {background-color: orange;} /* 클릭으로 인한 활성화 시 배경 색 변경 */
 }
 
-.side_rank {
+.side_rankup {
     background-color: skyblue;
+    display: flex;
+    border-right: 3px solid white;
+    border-left: 3px solid white;
+    border-bottom: 3px solid white;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 80%;
+}
+
+.side_rankdown {
+    background-color: plum;
     display: flex;
     border-right: 3px solid white;
     border-left: 3px solid white;
