마이페이지 수정중"

--- a/src/Jaehyeok_Lee/MyPage.css
+++ b/src/Jaehyeok_Lee/MyPage.css
@@ -1,5 +1,5 @@
 .Wrapper {
-    background-color: white;
+    background-color: blanchedalmond;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -7,15 +7,13 @@
 }
 
 .Container {
-    background-color: gold;
-    height: 100%;
-    width: 25%;
+    height: 600px;
+    width: 500px;
     display: flex;
     flex-direction: row;
     align-items:flex-start;
     justify-content: center;
     margin-bottom: 10px;
-    border: 2px solid gray; /* 테두리 두께 및 색 */
     border-radius: 20px; /* 꼭짓점 둥근 정도 */
     & > * { /* 각 항목별 간격(?) → 잘 모르겠음 */
         :not(:last-child) {
@@ -25,16 +23,14 @@
 }
 
 .PostContainer {
-    background-color: greenyellow;
     height: 100%;
-    width: 100%;
+    width: 70%;
     padding: 25px 16px;
 }
 
 .PhotoContainer {
-    background-color: dodgerblue;
-    height: 100%;
-    width: 100%;
+    height: 40%;
+    width: 30%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -53,27 +49,27 @@
 }
 
 .Label {
-    background-color: coral;
     font-size: 16px; /* 글자 크기 */
     display: flex;
     flex-direction: row;
     justify-content: center;
     width: max-content;
-    height: 30px;
+    height: 40px;
 }
 
 .tag {
-    background-color: aquamarine;
-    text-align:unset;
+    font-size: 17px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     margin-right: 10px;
-    width: 70px;
+    width: 75px;
     height: 100%;
 }
 
 .write {
-    background-color: plum;
     text-align: start;
-    width: 180px;
+    width: 220px;
     height: 100%;
     border: 1px solid gray;
     border-radius: 5px;
