--- a/src/YoutubeVideoStyle.css
+++ b/src/YoutubeVideoStyle.css
@@ -1,15 +1,47 @@
+.menu {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.menu-contents {
+    text-align: center;
+    margin: auto;
+}
+
+.noarrow-menu{
+    display: flex;
+}
+
 .youtubeEmpty {
     display: flex;
     justify-content: center;
+}
+
+.youtubeList {
+    display:absolute;
+    padding: 0;
+    list-style-type: none;
 }
 
 .youtubeBorder {
     background-color: rgb(249, 249, 249);
     display: flex;
     height: 10%;
-    width: 90%;
+    width: 100%;
     margin-top: 1px;
     border-top: 1px solid rgb(230, 230, 230);
+}
+
+.youtubeRankingOut {
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.youtubeRankingIn {
+    margin: auto;
 }
 
 .youtubeImage {
