--- a/src/HomePageNavbar.css
+++ b/src/HomePageNavbar.css
@@ -1,5 +1,5 @@
 .Navbar{
-    background: linear-gradient(90deg, rgb(160, 38, 38) 0%, rgb(173, 41, 41) 100%);
+    background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 100%);
     height: 80px;
     display: flex;
     justify-content: center;
@@ -9,7 +9,7 @@
 }
 
 .navbar-logo img {
-    width: 120px;
+    width: 180px;
     margin-top: 0px;
 }
 
@@ -28,105 +28,17 @@
 }
 
 .nav-links{
-    color: white;
+    color: #000000;
     text-decoration: none;
     padding: .5rem 1rem;
 }
 
 .nav-links:hover{
-    background-color: #f76d6d;
+    color: #03CF5D;
     border-radius: 4px;
     transition: all .2s ease-out;
 }
 
 .fa-bars{
     color: #fff;
-}
-
-.nav-links-mobile{
-    display: none;
-}
-
-.menu-icon{
-    display: none;
-}
-
-@media screen and (max-width: 960px) {
-    .Navbar{
-        position: relative;
-    }
-
-    .nav-menu{
-        flex-direction: column;
-        width: 100%;
-        height: 500px;
-        position: absolute;
-        top: 80px;
-        left:-100%;
-        transition: all .5s ease;
-    }
-
-    .nav-menu.active{
-        background: #f46666;
-        left: 0;
-        transition: all .5s ease;
-        z-index: 1;
-    }
-
-    .nav-links{
-        text-align: center;
-        padding: 2rem;
-        width: 100%;
-        display: table;
-    }
-
-    .nav-links:hover{
-        background-color: #fa7575;
-        border-radius: 0;
-    }
-
-    .navbar-logo{
-        position: absolute;
-        top: 0;
-        left: 0;
-        transform: translate(25%, 50%);
-    }
-
-    .menu-icon{
-        display: block;
-        position: absolute;
-        top: 0;
-        right: 0;
-        transform: translate(-100%, 60%);
-        font-size: 1.8rem;
-        cursor: pointer;
-    }
-    
-    .fa-times{
-        color: #fff;
-        font-size: 2rem;
-    }
-
-    .nav-links-mobile{
-        display: block;
-        text-align: center;
-        padding: 1.5rem;
-        margin: 2rem auto;
-        border-radius: 4px;
-        width: 80%;
-        background: #fad934;
-        text-decoration: none;
-        color: #fff;
-        font-size: 1.5rem;
-    }
-
-    .nav-links-mobile:hover{
-        background: #fff;
-        color: #f46565;
-        transition: 250ms;
-    }
-
-    Button {
-        display: none;
-    }
 }
