--- a/src/HomePageNavbar.css
+++ b/src/HomePageNavbar.css
@@ -48,15 +48,18 @@
     text-decoration: none;
     padding: .5rem 1rem;
     margin: 0 auto;
+    font-family : 'mbcfont';
 }
 
 .nav-links-active{
     display :flex;
-    padding: .5rem 1rem;
     height: 100%;
+    text-decoration: none;
+    padding: .5rem 1rem;
     justify-content: center;
     align-items: center;
     border-bottom: 2px solid #03CF5D;
+    font-family : 'mbcfont';
 }
 
 .nav-links:hover{
