마이페에이지

--- a/src/Jaehyeok_Lee/MyPage.css
+++ b/src/Jaehyeok_Lee/MyPage.css
@@ -213,19 +213,21 @@
 }
 
 .CheckButton {
-    width: 30px;
-    height: 30px;
-    margin-top: 10px;
-    margin-left: 15px;
+    width: 25px;
+    height: 25px;
+    margin-top: 12px;
+    margin-right: 8px;
+    margin-left: 20px;
     font-size: 50px;
     background-image: url("checkIcon.png");
     background-size: cover;
 }
 
 .DeleteButton {
-    width: 48px;
-    height: 48px;
-    margin-left: 5px;
+    width: 25px;
+    height: 25px;
+    margin-top: 12px;
+    margin-left: 20px;
     font-size: 50px;
     background-image: url("deleteIcon.png");
     background-size: cover;
